--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-date-picker": "^4.2.13",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.7.2",
