--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.7.2",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-switch-toggles": "^1.0.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
